<resources>
    <!-- city_weather -->
    <string name="app_name">Atmosphere</string>
    <string name="tempNow">-3</string>
    <string name="tempNextHour1">-3</string>
    <string name="tempNextHour2">-5</string>
    <string name="tempNextHour3">-6</string>
    <string name="tempNextHour4">-8</string>
    <string name="tempNextHour1Description">9:00</string>
    <string name="tempNextHour2Description">10:00</string>
    <string name="tempNextHour3Description">11:00</string>
    <string name="tempNextHour4Description">12:00</string>
    <string name="imageTempNowDescription">sunny</string>
    <string name="tempNext5DaysHeader">Weather for the next 5 days</string>
    <string name="labelDateNextDay1">29.10</string>
    <string name="labelDateNextDay2">30.10</string>
    <string name="labelDateNextDay3">31.10</string>
    <string name="labelDateNextDay4">01.11</string>
    <string name="labelDateNextDay5">02.11</string>
    <string name="labelMorningNextDay1">-3</string>
    <string name="labelMorningNextDay2">-3</string>
    <string name="labelMorningNextDay3">-5</string>
    <string name="labelMorningNextDay4">-3</string>
    <string name="labelMorningNextDay5">-7</string>
    <string name="labelMiddayNextDay1">0</string>
    <string name="labelMiddayNextDay2">+1</string>
    <string name="labelMiddayNextDay3">-1</string>
    <string name="labelMiddayNextDay4">0</string>
    <string name="labelMiddayNextDay5">-3</string>
    <string name="labelEveningNextDay1">-4</string>
    <string name="labelEveningNextDay2">-7</string>
    <string name="labelEveningNextDay3">-10</string>
    <string name="labelEveningNextDay4">-6</string>
    <string name="labelEveningNextDay5">-10</string>
    <string name="labelDate">Date</string>
    <string name="labelMorning">Morning</string>
    <string name="labelMidday">Midday</string>
    <string name="labelEvening">Evening</string>
    <string name="settings">Settings</string>
    <string name="webInfo">Find on net</string>

    <!-- settings -->
    <string name="themeHeader">Choose theme</string>
    <string name="themeDay">Day</string>
    <string name="themeNight">Night</string>
    <string name="themeAuto">Auto</string>
    <string name="weatherDetailHeader">Choose weather detail</string>
    <string name="weatherDetailAll">Maximum info</string>
    <string name="citiesHeader">Your cities</string>
    <string name="saveSettings">Save</string>
    <string name="addCity">Add city</string>
    <string name="chooseTheme">Choosed theme \"%s\"</string>

    <!-- city choose -->
    <string name="chooseCityHeader">Choose city</string>
    <string name="enterCityName">Enter city name</string>
    <string name="chooseCityOk">Add city</string>
    <string name="cancel">Cancel</string>
    <string name="errorCityName">Wrong city name: min length 2 chars, first char must be uppercase</string>

    <!-- about city -->
    <string name="weatherIn">weather in %s</string>

    <!-- navigation -->
    <string name="nav_weather">Weather</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_city_choose">City choose</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- toolbar / popup menu -->
    <string name="toolbar_add">Add city</string>
    <string name="toolbar_clear">Clear cities</string>
    <string name="toolbar_search">Search</string>
    <string name="toolbar_settings">Settings</string>
    <string name="context_update">Update weather</string>
    <string name="context_delete">Delete city</string>
    <string name="context_move_up">Move up</string>
    <string name="context_move_down">Move down</string>
    <string name="context_clear">Clear list</string>

    <string-array name="cities">
        <item>Kemerovo</item>
        <item>Moscow</item>
        <item>Novosibirsk</item>
        <item>St. Petersburg</item>
    </string-array>

    <string name="WEATHER_URL" translatable="false">https://api.openweathermap.org/data/2.5/weather?q=%s</string>
    <string name="weather_temp_type" translatable="false">metric</string>

    <!-- clear cities dialog -->
    <string name="clear_cities_dialog_title">Attention!</string>
    <string name="clear_cities_dialog_message">You are about to clear the list of cities. Sure?</string>
    <string name="clear_cities_dialog_button_yes">Yes</string>
    <string name="clear_cities_dialog_button_no">No</string>

    <string name="backgroundDescription">Background image</string>
    <string name="backgroundImageUrl">https://nost1.gismeteo.ru/images/2018/10/f088402b.jpg</string>

    <string name="battery_low">Battery low!</string>
    <string name="connectivity_change">Connectivity change!</string>
</resources>
