<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/toolbar_search"
        android:orderInCategory="5"
        android:title="@string/toolbar_search"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/toolbar_add"
        android:orderInCategory="10"
        android:title="@string/toolbar_add"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toolbar_clear"
        android:orderInCategory="20"
        android:title="@string/toolbar_clear"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        app:showAsAction="never" />
    <item
        android:id="@+id/toolbar_settings"
        android:orderInCategory="30"
        android:title="@string/toolbar_settings"
        android:icon="@android:drawable/ic_menu_manage"
        app:showAsAction="never" />
</menu>
