<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cityChooseHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/themeHeader"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RadioGroup
        android:id="@+id/settingsTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/themeDay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cityChooseHeader">

        <RadioButton
            android:id="@+id/themeDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="changeTheme"
            android:text="@string/themeDay" />

        <RadioButton
            android:id="@+id/themeNight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/themeNight" />

        <RadioButton
            android:id="@+id/themeAuto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/themeAuto" />
    </RadioGroup>

    <TextView
        android:id="@+id/settingsWeatherDetailHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weatherDetailHeader"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsTheme"/>

    <Switch
        android:id="@+id/weatherDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/weatherDetailAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsWeatherDetailHeader" />

    <Button
        android:id="@+id/saveSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveSettings"
        android:text="@string/saveSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherDetail" />


</androidx.constraintlayout.widget.ConstraintLayout>