<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CitiesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/citiesHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/citiesHeader"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cityList"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cityList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/citiesHeader"
            app:layout_constraintBottom_toTopOf="@id/cityChooseHeader"
            tools:listitem="@layout/city_item" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cityChooseHeader"
            android:layout_width="@dimen/empty"
            android:layout_height="wrap_content"
            android:text="@string/chooseCityHeader"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@id/addCity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cityList"
            app:layout_constraintHorizontal_weight="3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cityChooseText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterCityName"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addCity"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chooseCityOk"
            app:cornerRadius="@dimen/radiusButtons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cityChooseHeader"
            app:layout_constraintTop_toBottomOf="@+id/cityList"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>